codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_full_frames.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 144
expression: "snapshots.join(\"\\n---\\n\")"
---
empty (48 columns):

  >_ Black Arrow (v<VERSION>)
     loading


› Describe a task

  ? for shortcuts
---
configured (48 columns):

  >_ Black Arrow (v<VERSION>)
     workspace


› Describe a task

  ? for shortcuts
---
resuming (48 columns):

  >_ Black Arrow (v<VERSION>)
     loading
  Resuming session…

› Describe a task

  ? for shortcuts
---
forking (48 columns):

  >_ Black Arrow (v<VERSION>)
     loading
  Forking session…

› draft while loading


---
multiline (48 columns):

  >_ Black Arrow (v<VERSION>)
     loading


› first startup line
  second startup line


---
narrow (18 columns):

  >_ Black Arrow …
     loading


› first startup
  line
  second startup
  line
